--- a/site/shop/index.html
+++ b/site/shop/index.html
@@ -46,7 +46,10 @@
                         d="M294.4 36.4L289.1 36C284 36 280.8 37.6 279.3 40.8V73.5H263.2V21.9H278.3L278.8 28.5C281.5 23.4 285.3 20.9 290.1 20.9C291.8 20.9 293.3 21.1 294.6 21.5L294.4 36.4Z"
                         fill="#FF3333"
                     />
-                    <path d="M317.1 0.699951H300.9V52.4H317.1V0.699951Z" fill="#FF3333" />
+                    <path
+                        d="M317.1 0.699951H300.9V52.4H317.1V0.699951Z"
+                        fill="#FF3333"
+                    />
                     <path
                         d="M318 65.7C318 68 317.2 69.9 315.5 71.3C313.8 72.8 311.7 73.5 309 73.5C306.3 73.5 304.2 72.8 302.5 71.3C300.8 69.8 300 68 300 65.7C300 63.4 300.8 61.5 302.5 60.1C304.2 58.6 306.3 57.9 309 57.9C311.6 57.9 313.8 58.6 315.5 60.1C317.2 61.6 318 63.4 318 65.7Z"
                         fill="#333333"
@@ -167,10 +170,31 @@
                                 </style>
                             </defs>
                             <title>login_esport</title>
-                            <line class="cls-1" x1="26" y1="15" x2="8" y2="15" />
-                            <line class="cls-2" x1="14" y1="19" x2="8" y2="15" />
-                            <line class="cls-2" x1="14" y1="11" x2="8" y2="15" />
-                            <polyline class="cls-2" points="20 9.36 20 1 1 1 1 29 20 29 20 21.65" />
+                            <line
+                                class="cls-1"
+                                x1="26"
+                                y1="15"
+                                x2="8"
+                                y2="15"
+                            />
+                            <line
+                                class="cls-2"
+                                x1="14"
+                                y1="19"
+                                x2="8"
+                                y2="15"
+                            />
+                            <line
+                                class="cls-2"
+                                x1="14"
+                                y1="11"
+                                x2="8"
+                                y2="15"
+                            />
+                            <polyline
+                                class="cls-2"
+                                points="20 9.36 20 1 1 1 1 29 20 29 20 21.65"
+                            />
                         </svg>
                     </a>
                 </div>
@@ -201,10 +225,31 @@
                                 </style>
                             </defs>
                             <title>logout_exp</title>
-                            <line class="cls-1" x1="12" y1="15" x2="28" y2="15" />
-                            <line class="cls-2" x1="22" y1="19" x2="28" y2="15" />
-                            <line class="cls-2" x1="22" y1="11" x2="28" y2="15" />
-                            <polyline class="cls-2" points="19 8.4 19 1 1 1 1 29 19 29 19 21.7" />
+                            <line
+                                class="cls-1"
+                                x1="12"
+                                y1="15"
+                                x2="28"
+                                y2="15"
+                            />
+                            <line
+                                class="cls-2"
+                                x1="22"
+                                y1="19"
+                                x2="28"
+                                y2="15"
+                            />
+                            <line
+                                class="cls-2"
+                                x1="22"
+                                y1="11"
+                                x2="28"
+                                y2="15"
+                            />
+                            <polyline
+                                class="cls-2"
+                                points="19 8.4 19 1 1 1 1 29 19 29 19 21.7"
+                            />
                         </svg>
                         <!-- выйти -->
                     </a>
