--- a/site/shop/podutct-card.html
+++ b/site/shop/podutct-card.html
@@ -20,10 +20,14 @@
                 <p class="price">499.99$</p>
             </div>
             <div class="buy-container">
-                <div class="add-to-cart-button show-when-empty button medium-size red">
+                <div
+                    class="add-to-cart-button show-when-empty button medium-size red"
+                >
                     <span class="button-text">Добавить</span>
                 </div>
-                <div class="small-button minus-cart-button hide-when-empty white-button">
+                <div
+                    class="small-button minus-cart-button hide-when-empty white-button"
+                >
                     <span class="small-button-text"
                         ><svg
                             style="margin: 18px 10px"
@@ -47,7 +51,9 @@
                 </div>
                 <p class="cart-counter hide-when-empty">0</p>
                 <!-- <button class="plus-cart-button hide-when-empty">+</button> -->
-                <div class="small-button plus-cart-button hide-when-empty white-button">
+                <div
+                    class="small-button plus-cart-button hide-when-empty white-button"
+                >
                     <span class="small-button-text"
                         ><svg
                             style="margin: 9px"
