--- a/site/cart/index.html
+++ b/site/cart/index.html
@@ -80,10 +80,10 @@
                 </div>
 
                 <div>
-                    <a href="../account/index.html">
+                    <a class="vector-icon" href="../account/index.html">
                         <svg
-                            width="18"
-                            height="20"
+                            width="24"
+                            height="24"
                             viewBox="0 0 18 20"
                             fill="none"
                             xmlns="http://www.w3.org/2000/svg"
@@ -110,19 +110,115 @@
                     <a href="../shop/index.html">магазин</a>
                 </p>
 
-                <div class="vsible-when-logged-out">
-                    <a href="../authorization/index.html">авторизация</a>
+                <div class="vsible-when-logged-out vector-icon">
+                    <!-- <a href="../authorization/index.html">авторизация</a> -->
+                    <a href="../authorization/index.html">
+                        <svg
+                            id="Layer_1"
+                            data-name="Layer 1"
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 26 30"
+                            width="24"
+                            height="24"
+                        >
+                            <defs>
+                                <style>
+                                    .cls-1,
+                                    .cls-2 {
+                                        fill: none;
+                                        stroke: #000;
+                                        stroke-miterlimit: 10;
+                                        stroke-width: 2px;
+                                    }
+                                    .cls-2 {
+                                        stroke-linecap: round;
+                                    }
+                                </style>
+                            </defs>
+                            <title>login_esport</title>
+                            <line
+                                class="cls-1"
+                                x1="26"
+                                y1="15"
+                                x2="8"
+                                y2="15"
+                            />
+                            <line
+                                class="cls-2"
+                                x1="14"
+                                y1="19"
+                                x2="8"
+                                y2="15"
+                            />
+                            <line
+                                class="cls-2"
+                                x1="14"
+                                y1="11"
+                                x2="8"
+                                y2="15"
+                            />
+                            <polyline
+                                class="cls-2"
+                                points="20 9.36 20 1 1 1 1 29 20 29 20 21.65"
+                            />
+                        </svg>
+                    </a>
                 </div>
 
                 <div class="vsible-when-logged-in">
-                    <button class="logout-button">
-                        <img
-                            src="../assets/images/logouticon.png"
-                            style="height: 20px"
-                            alt=""
-                        />
+                    <a class="logout-button vector-icon">
+                        <!-- <img src="../assets/images/logouticon.png" style="height: 20px" alt="" /> -->
+                        <svg
+                            id="Layer_1"
+                            data-name="Layer 1"
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 29 30"
+                            width="24"
+                            height="24"
+                        >
+                            <defs>
+                                <style>
+                                    .cls-1,
+                                    .cls-2 {
+                                        fill: none;
+                                        stroke: #000;
+                                        stroke-miterlimit: 10;
+                                        stroke-width: 2px;
+                                    }
+                                    .cls-2 {
+                                        stroke-linecap: round;
+                                    }
+                                </style>
+                            </defs>
+                            <title>logout_exp</title>
+                            <line
+                                class="cls-1"
+                                x1="12"
+                                y1="15"
+                                x2="28"
+                                y2="15"
+                            />
+                            <line
+                                class="cls-2"
+                                x1="22"
+                                y1="19"
+                                x2="28"
+                                y2="15"
+                            />
+                            <line
+                                class="cls-2"
+                                x1="22"
+                                y1="11"
+                                x2="28"
+                                y2="15"
+                            />
+                            <polyline
+                                class="cls-2"
+                                points="19 8.4 19 1 1 1 1 29 19 29 19 21.7"
+                            />
+                        </svg>
                         <!-- выйти -->
-                    </button>
+                    </a>
                 </div>
             </nav>
         </header>
